--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -11,7 +11,7 @@
       <TextField fx:id="artEingabe" layoutX="61.0" layoutY="112.0" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="90.0" />
       <Button fx:id="hinzufuegen" layoutX="68.0" layoutY="159.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="112.0" text="Hinzufügen" AnchorPane.topAnchor="160.0" />
       <Button fx:id="loeschen" layoutX="68.0" layoutY="210.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="112.0" text="Löschen" AnchorPane.topAnchor="210.0" />
-      <Button fx:id="beenden" layoutX="68.0" layoutY="261.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="112.0" text="Beenden" AnchorPane.topAnchor="260.0" />
-      <TableView fx:id="tabelle" layoutX="269.0" layoutY="30.0" prefHeight="348.0" prefWidth="308.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
+      <Button fx:id="beenden" layoutX="68.0" layoutY="261.0" mnemonicParsing="false" onAction="#beenden" prefHeight="27.0" prefWidth="112.0" text="Beenden" AnchorPane.topAnchor="260.0" />
+      <TableView fx:id="tabelle" layoutX="269.0" layoutY="30.0" onSort="#loeschen" prefHeight="348.0" prefWidth="308.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
    </children>
 </AnchorPane>
