--- a/src/sample/fxml/hauptmenu.fxml
+++ b/src/sample/fxml/hauptmenu.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="264.0" prefWidth="225.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.HauptmenuController">
+<AnchorPane prefHeight="215.0" prefWidth="170.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.HauptmenuController">
    <children>
-      <Button fx:id="geheZuVorrat" layoutX="50.0" layoutY="51.0" mnemonicParsing="false" onAction="#oeffneVorrat" prefHeight="27.0" prefWidth="128.0" text="Vorrat" />
-      <Button fx:id="geheZuRezepte" layoutX="50.0" layoutY="97.0" mnemonicParsing="false" onAction="#oeffneRezepte" prefHeight="27.0" prefWidth="128.0" text="Rezepte" />
-      <Button fx:id="beenden" layoutX="47.0" layoutY="187.0" mnemonicParsing="false" onAction="#beenden" prefHeight="27.0" prefWidth="128.0" text="Beenden" />
-      <Button fx:id="geheZuEinkaufszettel" layoutX="49.0" layoutY="143.0" mnemonicParsing="false" onAction="#oeffneEinkaufszettel" prefHeight="27.0" prefWidth="128.0" text="Einkaufszettel" />
+      <Button fx:id="geheZuVorrat" layoutX="49.0" layoutY="20.0" mnemonicParsing="false" onAction="#oeffneVorrat" prefHeight="27.0" prefWidth="130.0" text="Vorrat" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="geheZuRezepte" layoutX="49.0" layoutY="70.0" mnemonicParsing="false" onAction="#oeffneRezepte" prefHeight="27.0" prefWidth="130.0" text="Rezepte" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="70.0" />
+      <Button fx:id="beenden" layoutX="49.0" layoutY="170.0" mnemonicParsing="false" onAction="#beenden" prefHeight="27.0" prefWidth="130.0" text="beenden" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="170.0" />
+      <Button fx:id="geheZuEinkaufszettel" layoutX="48.0" layoutY="120.0" mnemonicParsing="false" onAction="#oeffneEinkaufszettel" prefHeight="27.0" prefWidth="130.0" text="Einkäufe" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="120.0" />
    </children>
 </AnchorPane>
