--- a/src/sample/fxml/rezeptformular.fxml
+++ b/src/sample/fxml/rezeptformular.fxml
@@ -8,12 +8,12 @@
 
 <AnchorPane prefHeight="350.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.RezeptformularController">
    <children>
-      <TextArea fx:id="textEingabe" layoutX="25.0" layoutY="74.0" prefHeight="200.0" prefWidth="414.0" />
-      <TextField fx:id="nameEingabe" layoutX="25.0" layoutY="29.0" />
-      <TextField fx:id="zutatEingabe" layoutX="25.0" layoutY="296.0" prefHeight="27.0" prefWidth="167.0" />
-      <Spinner fx:id="zutatAnzahlEingabe" layoutX="205.0" layoutY="296.0" prefHeight="27.0" prefWidth="62.0" />
-      <Button fx:id="zutatHinzufuegenButton" layoutX="285.0" layoutY="296.0" mnemonicParsing="false" onAction="#zutatHinzufuegen" text="+" />
-      <Button fx:id="abbrechenButton" layoutX="353.0" layoutY="29.0" mnemonicParsing="false" onAction="#abbrechen" text="abbrechen" />
-      <Button fx:id="rezeptButton" layoutX="291.0" layoutY="29.0" mnemonicParsing="false" onAction="#rezeptHinzufuegen" text="add" />
+      <TextArea fx:id="textEingabe" layoutX="25.0" layoutY="74.0" prefHeight="200.0" prefWidth="414.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="70.0" />
+      <TextField fx:id="nameEingabe" layoutX="25.0" layoutY="29.0" prefHeight="27.0" prefWidth="170.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" />
+      <TextField fx:id="zutatEingabe" layoutX="25.0" layoutY="296.0" prefHeight="20.0" prefWidth="170.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="303.0" />
+      <Spinner fx:id="zutatAnzahlEingabe" layoutX="209.0" layoutY="303.0" prefHeight="27.0" prefWidth="62.0" />
+      <Button fx:id="zutatHinzufuegenButton" layoutX="291.0" layoutY="303.0" mnemonicParsing="false" onAction="#zutatHinzufuegen" text="+" />
+      <Button fx:id="abbrechenButton" layoutX="367.0" layoutY="20.0" mnemonicParsing="false" onAction="#abbrechen" prefHeight="27.0" prefWidth="93.0" text="abbrechen" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="rezeptButton" layoutX="258.0" layoutY="20.0" mnemonicParsing="false" onAction="#rezeptHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="hinzufügen" AnchorPane.topAnchor="20.0" />
    </children>
 </AnchorPane>
