--- a/src/sample/fxml/rezepttext.fxml
+++ b/src/sample/fxml/rezepttext.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="230.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.RezepttextController">
+<AnchorPane prefHeight="270.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.RezepttextController">
    <children>
-      <TextArea fx:id="infoText" layoutX="15.0" layoutY="15.0" prefHeight="200.0" prefWidth="420.0" />
+      <TextArea fx:id="infoText" layoutX="15.0" layoutY="15.0" prefHeight="200.0" prefWidth="420.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+      <Button fx:id="schließen" layoutX="175.0" layoutY="236.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="100.0" text="schließen" AnchorPane.bottomAnchor="14.0" AnchorPane.topAnchor="236.0" />
    </children>
 </AnchorPane>
