--- a/src/sample/fxml/vorratsliste.fxml
+++ b/src/sample/fxml/vorratsliste.fxml
@@ -11,12 +11,12 @@
    <children>
       <TextField fx:id="nameEingabe" layoutX="61.0" layoutY="48.0" maxWidth="170.0" prefHeight="27.0" prefWidth="190.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="40.0" />
       <TextField fx:id="artEingabe" layoutX="61.0" layoutY="112.0" maxWidth="184.0" prefHeight="27.0" prefWidth="190.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="90.0" />
-      <Button fx:id="hinzufuegen" layoutX="40.0" layoutY="240.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="90.0" text="zu Einkauf" AnchorPane.topAnchor="240.0" />
+      <Button fx:id="hinzufuegen" layoutX="40.0" layoutY="240.0" mnemonicParsing="false" onAction="#produktInEinkaufslisteEinfuegen" prefHeight="27.0" prefWidth="90.0" text="zu Einkauf" AnchorPane.topAnchor="240.0" />
       <Button fx:id="loeschen" layoutX="40.0" layoutY="289.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="90.0" text="löschen" AnchorPane.topAnchor="290.0" />
       <Button fx:id="beenden" layoutX="40.0" layoutY="333.0" mnemonicParsing="false" onAction="#beenden" prefHeight="27.0" prefWidth="90.0" text="zurück" AnchorPane.bottomAnchor="33.0" AnchorPane.topAnchor="340.0" />
       <TableView fx:id="tabelle" layoutX="254.0" layoutY="31.0" prefHeight="327.0" prefWidth="470.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
       <Spinner fx:id="anzahlEingabe" layoutX="163.0" layoutY="189.0" prefHeight="27.0" prefWidth="56.0" AnchorPane.leftAnchor="163.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="189.0" />
       <DatePicker fx:id="datumEingabe" layoutX="53.0" layoutY="140.0" maxWidth="183.0" prefHeight="27.0" prefWidth="183.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="140.0" />
-      <Button fx:id="zuEinkauf" layoutX="55.0" layoutY="191.0" mnemonicParsing="false" onAction="#produktInEinkaufslisteEinfuegen" prefHeight="27.0" prefWidth="90.0" text="hinzufügen" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="693.0" AnchorPane.topAnchor="190.0" />
+      <Button fx:id="zuEinkauf" layoutX="55.0" layoutY="191.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="90.0" text="hinzufügen" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="693.0" AnchorPane.topAnchor="190.0" />
    </children>
 </AnchorPane>
