--- a/src/sample/fxml/einkaufsliste.fxml
+++ b/src/sample/fxml/einkaufsliste.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="364.0" prefWidth="548.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.EinkaufslisteController">
    <children>
-      <TableView fx:id="tabelleEinkauf" layoutX="174.0" layoutY="20.0" prefHeight="324.0" prefWidth="344.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
-      <Button fx:id="hinzufuegenButton" layoutX="40.0" layoutY="88.0" mnemonicParsing="false" onAction="#hinzufuegen" prefHeight="27.0" prefWidth="93.0" text="hinzufügen" AnchorPane.topAnchor="90.0" />
-      <Button fx:id="loeschenButton" layoutX="40.0" layoutY="137.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="93.0" text="löschen" AnchorPane.topAnchor="140.0" />
-      <Button fx:id="add" layoutX="32.0" layoutY="40.0" mnemonicParsing="false" onAction="#vorratHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="eingekauft" AnchorPane.leftAnchor="40.0" />
-      <Button fx:id="zurueckButton" layoutX="40.0" layoutY="182.0" mnemonicParsing="false" onAction="#zurueck" prefHeight="27.0" prefWidth="93.0" text="zurück" AnchorPane.topAnchor="190.0" />
+      <TableView fx:id="tabelleEinkaufsliste" layoutX="164.0" layoutY="60.0" prefHeight="324.0" prefWidth="344.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="60.0" />
+      <Button fx:id="hinzufuegenButton" layoutX="34.0" layoutY="164.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="hinzufügen" AnchorPane.topAnchor="164.0" />
+      <Button fx:id="loeschenButton" layoutX="34.0" layoutY="214.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="93.0" text="löschen" AnchorPane.topAnchor="214.0" />
+      <Button fx:id="produkteVorratHinzufuegenButton" layoutX="34.0" layoutY="114.0" mnemonicParsing="false" onAction="#produkteVorratHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="eingekauft" AnchorPane.leftAnchor="34.0" />
+      <Button fx:id="zumHauptmenuButton" layoutX="34.0" layoutY="264.0" mnemonicParsing="false" onAction="#zumHauptmenu" prefHeight="27.0" prefWidth="93.0" text="zurück" AnchorPane.topAnchor="264.0" />
+      <Label fx:id="EinkaufslisteLabel" layoutX="310.0" layoutY="23.0" text="Einkäufe" />
    </children>
 </AnchorPane>
