--- a/src/sample/fxml/hauptmenu.fxml
+++ b/src/sample/fxml/hauptmenu.fxml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="215.0" prefWidth="170.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.HauptmenuController">
+<AnchorPane fx:id="hauptmenuPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.HauptmenuController">
    <children>
-      <Button fx:id="geheZuVorrat" layoutX="49.0" layoutY="20.0" mnemonicParsing="false" onAction="#oeffneVorrat" prefHeight="27.0" prefWidth="130.0" text="Vorrat" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" />
-      <Button fx:id="geheZuRezepte" layoutX="49.0" layoutY="70.0" mnemonicParsing="false" onAction="#oeffneRezepte" prefHeight="27.0" prefWidth="130.0" text="Rezepte" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="70.0" />
-      <Button fx:id="beenden" layoutX="49.0" layoutY="170.0" mnemonicParsing="false" onAction="#beenden" prefHeight="27.0" prefWidth="130.0" text="beenden" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="170.0" />
-      <Button fx:id="geheZuEinkaufszettel" layoutX="48.0" layoutY="120.0" mnemonicParsing="false" onAction="#oeffneEinkaufszettel" prefHeight="27.0" prefWidth="130.0" text="Einkäufe" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="120.0" />
+      <Button fx:id="geheZuVorrat" cache="true" layoutX="175.0" layoutY="188.0" mnemonicParsing="false" onAction="#oeffneVorratsliste" prefHeight="40.0" prefWidth="150.0" text="Vorrat" AnchorPane.leftAnchor="175.0" AnchorPane.topAnchor="188.0">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="geheZuRezepte" layoutX="175.0" layoutY="268.0" mnemonicParsing="false" onAction="#oeffneRezeptliste" prefHeight="40.0" prefWidth="150.0" text="Rezepte" AnchorPane.leftAnchor="175.0" AnchorPane.topAnchor="268.0">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="beenden" layoutX="175.0" layoutY="428.0" mnemonicParsing="false" onAction="#beenden" prefHeight="40.0" prefWidth="150.0" text="Beenden" AnchorPane.leftAnchor="175.0" AnchorPane.topAnchor="428.0">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button fx:id="geheZuEinkauf" layoutX="175.0" layoutY="348.0" mnemonicParsing="false" onAction="#oeffneEinkaufsliste" prefHeight="40.0" prefWidth="150.0" text="Einkäufe" AnchorPane.leftAnchor="175.0" AnchorPane.topAnchor="348.0">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Label alignment="CENTER" layoutX="102.0" layoutY="49.0" text="H.U.R.P." textFill="WHITE" AnchorPane.bottomAnchor="423.0" AnchorPane.topAnchor="49.0">
+         <font>
+            <Font name="Verdana Bold" size="64.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
