--- a/src/sample/fxml/rezeptliste.fxml
+++ b/src/sample/fxml/rezeptliste.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="424.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.RezeptlisteController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.RezeptlisteController">
    <children>
-      <TableView fx:id="rezeptTabelle" layoutX="166.0" layoutY="30.0" prefHeight="341.0" prefWidth="225.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="40.0" />
-      <Button fx:id="rezeptButton" layoutX="20.0" layoutY="86.0" mnemonicParsing="false" onAction="#hinzufuegen" prefHeight="27.0" prefWidth="134.0" text="hinzufügen" AnchorPane.topAnchor="90.0" />
-      <Button fx:id="loeschenButton" layoutX="20.0" layoutY="132.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="134.0" text="löschen" AnchorPane.topAnchor="140.0" />
-      <Button fx:id="zurueckButton" layoutX="20.0" layoutY="173.0" mnemonicParsing="false" onAction="#zurueck" prefHeight="27.0" prefWidth="134.0" text="zurück" AnchorPane.topAnchor="190.0" />
-      <Button fx:id="zutatenZurVerfügung" layoutX="33.0" layoutY="30.0" mnemonicParsing="false" onAction="#aussortieren" prefHeight="27.0" prefWidth="115.0" text="auf Vorrat" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="270.0" AnchorPane.topAnchor="40.0" />
+      <TableView fx:id="rezeptTabelle" layoutX="179.0" layoutY="60.0" prefHeight="341.0" prefWidth="225.0" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
+      <Button fx:id="rezeptButton" layoutX="41.0" layoutY="162.0" mnemonicParsing="false" onAction="#rezeptHinzufuegen" prefHeight="27.0" prefWidth="166.0" text="hinzufügen" AnchorPane.bottomAnchor="311.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
+      <Button fx:id="loeschenButton" layoutX="41.0" layoutY="212.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="166.0" text="löschen" AnchorPane.bottomAnchor="261.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
+      <Button fx:id="zumHauptmenuButton" layoutX="41.0" layoutY="312.0" mnemonicParsing="false" onAction="#zumHauptmenu" prefHeight="27.0" prefWidth="134.0" text="Hauptmenu" AnchorPane.bottomAnchor="161.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" AnchorPane.topAnchor="312.0" />
+      <Button fx:id="zutatenZurVerfügung" layoutX="41.0" layoutY="262.0" mnemonicParsing="false" onAction="#aussortieren" prefHeight="27.0" prefWidth="166.0" text="Vorrat hinzufügen" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
+      <Label alignment="CENTER" layoutX="37.0" layoutY="51.0" text="Rezepte" textFill="WHITE" AnchorPane.topAnchor="50.0">
+         <font>
+            <Font name="Verdana Bold" size="36.0" />
+         </font></Label>
    </children>
 </AnchorPane>
