--- a/src/sample/fxml/vorratsliste.fxml
+++ b/src/sample/fxml/vorratsliste.fxml
@@ -2,21 +2,27 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="paneProduktliste" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.VorratslisteController">
+<AnchorPane fx:id="paneProduktliste" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.VorratslisteController">
    <children>
-      <TextField fx:id="nameEingabe" layoutX="61.0" layoutY="48.0" maxWidth="170.0" prefHeight="27.0" prefWidth="190.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="40.0" />
-      <TextField fx:id="artEingabe" layoutX="61.0" layoutY="112.0" maxWidth="184.0" prefHeight="27.0" prefWidth="190.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="90.0" />
-      <Button fx:id="hinzufuegen" layoutX="40.0" layoutY="240.0" mnemonicParsing="false" onAction="#produktInEinkaufslisteEinfuegen" prefHeight="27.0" prefWidth="90.0" text="zu Einkauf" AnchorPane.topAnchor="240.0" />
-      <Button fx:id="loeschen" layoutX="40.0" layoutY="289.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="90.0" text="löschen" AnchorPane.topAnchor="290.0" />
-      <Button fx:id="beenden" layoutX="40.0" layoutY="333.0" mnemonicParsing="false" onAction="#beenden" prefHeight="27.0" prefWidth="90.0" text="zurück" AnchorPane.bottomAnchor="33.0" AnchorPane.topAnchor="340.0" />
-      <TableView fx:id="tabelle" layoutX="254.0" layoutY="31.0" prefHeight="327.0" prefWidth="470.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
-      <Spinner fx:id="anzahlEingabe" layoutX="163.0" layoutY="189.0" prefHeight="27.0" prefWidth="56.0" AnchorPane.leftAnchor="163.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="189.0" />
-      <DatePicker fx:id="datumEingabe" layoutX="53.0" layoutY="140.0" maxWidth="183.0" prefHeight="27.0" prefWidth="183.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="600.0" AnchorPane.topAnchor="140.0" />
-      <Button fx:id="zuEinkauf" layoutX="55.0" layoutY="191.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="90.0" text="hinzufügen" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="693.0" AnchorPane.topAnchor="190.0" />
+      <TextField fx:id="nameEingabe" layoutX="30.0" layoutY="139.0" maxWidth="170.0" prefHeight="27.0" prefWidth="190.0" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="610.0" AnchorPane.topAnchor="133.0" />
+      <TextField fx:id="artEingabe" layoutX="30.0" layoutY="189.0" maxWidth="184.0" prefHeight="27.0" prefWidth="190.0" AnchorPane.bottomAnchor="290.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="610.0" />
+      <Button fx:id="hinzufuegenButton" layoutX="41.0" layoutY="381.0" mnemonicParsing="false" onAction="#produktInEinkaufslisteEinfuegen" prefHeight="27.0" prefWidth="172.0" text="Einkauf hinzufügen" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="610.0" />
+      <Button fx:id="loeschenButton" layoutX="44.0" layoutY="329.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="82.0" text="löschen" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="695.0" />
+      <Button fx:id="zumHauptmenuButton" layoutX="30.0" layoutY="439.0" mnemonicParsing="false" onAction="#zumHauptmenu" prefHeight="27.0" prefWidth="174.0" text="Hauptmenu" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="610.0" />
+      <TableView fx:id="tabelleVorrat" layoutX="251.0" layoutY="31.0" prefHeight="420.0" prefWidth="532.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="260.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0" />
+      <Spinner fx:id="anzahlEingabe" layoutX="153.0" layoutY="288.0" prefHeight="27.0" prefWidth="56.0" AnchorPane.bottomAnchor="190.0" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="610.0" />
+      <DatePicker fx:id="datumEingabe" layoutX="30.0" layoutY="239.0" maxWidth="183.0" prefHeight="27.0" prefWidth="183.0" AnchorPane.bottomAnchor="240.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="610.0" />
+      <Button fx:id="zuEinkauf" layoutX="30.0" layoutY="289.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="89.0" text="hinzufügen" AnchorPane.bottomAnchor="190.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="695.0" />
+      <Label alignment="CENTER" layoutX="43.0" layoutY="49.0" text="Vorrat" textFill="WHITE" AnchorPane.topAnchor="50.0">
+         <font>
+            <Font name="Verdana Bold" size="42.0" />
+         </font></Label>
    </children>
 </AnchorPane>
