--- a/src/sample/fxml/einkaufsliste.fxml
+++ b/src/sample/fxml/einkaufsliste.fxml
@@ -4,14 +4,18 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="364.0" prefWidth="548.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.EinkaufslisteController">
+<AnchorPane prefHeight="500.0" prefWidth="548.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.EinkaufslisteController">
    <children>
-      <TableView fx:id="tabelleEinkaufsliste" layoutX="164.0" layoutY="60.0" prefHeight="324.0" prefWidth="344.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="60.0" />
-      <Button fx:id="hinzufuegenButton" layoutX="34.0" layoutY="164.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="hinzufügen" AnchorPane.topAnchor="164.0" />
-      <Button fx:id="loeschenButton" layoutX="34.0" layoutY="214.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="93.0" text="löschen" AnchorPane.topAnchor="214.0" />
-      <Button fx:id="produkteVorratHinzufuegenButton" layoutX="34.0" layoutY="114.0" mnemonicParsing="false" onAction="#produkteVorratHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="eingekauft" AnchorPane.leftAnchor="34.0" />
-      <Button fx:id="zumHauptmenuButton" layoutX="34.0" layoutY="264.0" mnemonicParsing="false" onAction="#zumHauptmenu" prefHeight="27.0" prefWidth="93.0" text="zurück" AnchorPane.topAnchor="264.0" />
-      <Label fx:id="EinkaufslisteLabel" layoutX="310.0" layoutY="23.0" text="Einkäufe" />
+      <TableView fx:id="tabelleEinkaufsliste" layoutX="164.0" layoutY="128.0" prefHeight="332.0" prefWidth="328.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="120.0" />
+      <Button fx:id="hinzufuegenButton" layoutX="38.0" layoutY="262.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="hinzufügen" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="40.0" />
+      <Button fx:id="loeschenButton" layoutX="38.0" layoutY="312.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="93.0" text="löschen" AnchorPane.bottomAnchor="161.0" AnchorPane.leftAnchor="40.0" />
+      <Button fx:id="produkteVorratHinzufuegenButton" layoutX="38.0" layoutY="212.0" mnemonicParsing="false" onAction="#produkteVorratHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="eingekauft" AnchorPane.bottomAnchor="261.0" AnchorPane.leftAnchor="40.0" />
+      <Button fx:id="zumHauptmenuButton" layoutX="38.0" layoutY="362.0" mnemonicParsing="false" onAction="#zumHauptmenu" prefHeight="27.0" prefWidth="93.0" text="zurück" AnchorPane.bottomAnchor="111.0" AnchorPane.leftAnchor="40.0" />
+      <Label fx:id="EinkaufslisteLabel" layoutX="239.0" layoutY="38.0" text="Einkäufe" textFill="WHITE" AnchorPane.topAnchor="40.0">
+         <font>
+            <Font name="Verdana Bold" size="43.0" />
+         </font></Label>
    </children>
 </AnchorPane>
