--- a/src/sample/fxml/rezeptliste.fxml
+++ b/src/sample/fxml/rezeptliste.fxml
@@ -12,7 +12,7 @@
       <Button fx:id="rezeptButton" layoutX="41.0" layoutY="162.0" mnemonicParsing="false" onAction="#rezeptHinzufuegen" prefHeight="27.0" prefWidth="166.0" text="hinzufügen" AnchorPane.bottomAnchor="311.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
       <Button fx:id="loeschenButton" layoutX="41.0" layoutY="212.0" mnemonicParsing="false" onAction="#loeschen" prefHeight="27.0" prefWidth="166.0" text="löschen" AnchorPane.bottomAnchor="261.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
       <Button fx:id="zumHauptmenuButton" layoutX="41.0" layoutY="312.0" mnemonicParsing="false" onAction="#zumHauptmenu" prefHeight="27.0" prefWidth="134.0" text="Hauptmenu" AnchorPane.bottomAnchor="161.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" AnchorPane.topAnchor="312.0" />
-      <Button fx:id="zutatenZurVerfügung" layoutX="41.0" layoutY="262.0" mnemonicParsing="false" onAction="#aussortieren" prefHeight="27.0" prefWidth="166.0" text="Vorrat hinzufügen" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
+      <Button fx:id="zutatenZurVerfügung" layoutX="41.0" layoutY="262.0" mnemonicParsing="false" onAction="#aussortieren" prefHeight="27.0" prefWidth="166.0" text="nach Verfügbarkeit" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="304.0" />
       <Label alignment="CENTER" layoutX="37.0" layoutY="51.0" text="Rezepte" textFill="WHITE" AnchorPane.topAnchor="50.0">
          <font>
             <Font name="Verdana Bold" size="36.0" />
