--- a/src/sample/fxml/rezepttext.fxml
+++ b/src/sample/fxml/rezepttext.fxml
@@ -4,11 +4,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="360.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.RezepttextController">
    <children>
       <TextArea fx:id="infoText" layoutX="20.0" layoutY="64.0" prefHeight="232.0" prefWidth="410.0" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="64.0" />
-      <Button fx:id="schließenButton" layoutX="175.0" layoutY="314.0" mnemonicParsing="false" onAction="#schließen" prefHeight="29.0" prefWidth="100.0" text="schließen" AnchorPane.bottomAnchor="17.0" AnchorPane.topAnchor="314.0" />
-      <Label fx:id="rezeptNameLabel" alignment="CENTER" layoutX="130.0" layoutY="18.0" prefHeight="29.0" prefWidth="191.0" text="Rezept" />
+      <Button fx:id="schließenButton" layoutX="175.0" layoutY="314.0" mnemonicParsing="false" onAction="#schließen" prefHeight="27.0" prefWidth="100.0" text="schließen" AnchorPane.bottomAnchor="20.0" AnchorPane.topAnchor="314.0" />
+      <Label fx:id="rezeptNameLabel" alignment="CENTER" layoutX="130.0" layoutY="18.0" prefHeight="29.0" prefWidth="191.0" text="Rezept" textFill="WHITE" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font name="Verdana Bold" size="18.0" />
+         </font></Label>
    </children>
 </AnchorPane>
