--- a/src/sample/fxml/einkaufsformular.fxml
+++ b/src/sample/fxml/einkaufsformular.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="197.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.EinkaufsformularController">
+<AnchorPane maxHeight="220.0" prefHeight="220.0" prefWidth="220.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.EinkaufsformularController">
    <children>
-      <Button fx:id="produktHinzufuegenButton" layoutX="24.0" layoutY="108.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="102.0" text="hinzufügen" />
-      <Button fx:id="abbruchButton" layoutX="26.0" layoutY="150.0" mnemonicParsing="false" onAction="#abbrechen" prefHeight="27.0" prefWidth="102.0" text="abbrechen" />
-      <TextField fx:id="nameEingabe" layoutX="24.0" layoutY="24.0" />
-      <TextField fx:id="artEingabe" layoutX="24.0" layoutY="65.0" prefHeight="27.0" prefWidth="102.0" />
-      <Spinner fx:id="anzahlEingabe" layoutX="136.0" layoutY="65.0" prefHeight="27.0" prefWidth="55.0" />
+      <Button fx:id="produktHinzufuegenButton" layoutX="20.0" layoutY="150.0" mnemonicParsing="false" onAction="#produktHinzufuegen" prefHeight="27.0" prefWidth="102.0" text="hinzufügen" AnchorPane.topAnchor="150.0" />
+      <Button fx:id="abbruchButton" layoutX="20.0" layoutY="190.0" mnemonicParsing="false" onAction="#abbrechen" prefHeight="27.0" prefWidth="102.0" text="abbrechen" AnchorPane.bottomAnchor="30.0" AnchorPane.topAnchor="190.0" />
+      <TextField fx:id="nameEingabe" layoutX="20.0" layoutY="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="30.0" />
+      <TextField fx:id="artEingabe" layoutX="20.0" layoutY="70.0" prefHeight="27.0" prefWidth="180.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="70.0" />
+      <Spinner fx:id="anzahlEingabe" layoutX="20.0" layoutY="110.0" prefHeight="27.0" prefWidth="102.0" AnchorPane.rightAnchor="98.0" AnchorPane.topAnchor="110.0" />
+      <ChoiceBox fx:id="einheitChoiceBox" layoutX="132.0" layoutY="110.0" prefWidth="65.0" AnchorPane.topAnchor="110.0" />
    </children>
 </AnchorPane>
