--- a/src/sample/fxml/rezeptformular.fxml
+++ b/src/sample/fxml/rezeptformular.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -11,9 +12,10 @@
       <TextArea fx:id="textEingabe" layoutX="25.0" layoutY="82.0" prefHeight="200.0" prefWidth="440.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="70.0" />
       <TextField fx:id="nameEingabe" layoutX="25.0" layoutY="29.0" prefHeight="27.0" prefWidth="170.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" />
       <TextField fx:id="zutatEingabe" layoutX="25.0" layoutY="355.0" prefHeight="27.0" prefWidth="170.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="355.0" />
-      <Spinner fx:id="zutatAnzahlEingabe" layoutX="209.0" layoutY="355.0" prefHeight="27.0" prefWidth="62.0" />
-      <Button fx:id="zutatHinzufuegenButton" layoutX="291.0" layoutY="355.0" mnemonicParsing="false" onAction="#zutatHinzufuegen" text="+" />
+      <Spinner fx:id="zutatAnzahlEingabe" layoutX="209.0" layoutY="355.0" prefHeight="27.0" prefWidth="79.0" AnchorPane.leftAnchor="200.0" />
+      <Button fx:id="zutatHinzufuegenButton" layoutX="378.0" layoutY="355.0" mnemonicParsing="false" onAction="#zutatHinzufuegen" text="+" AnchorPane.leftAnchor="360.0" />
       <Button fx:id="abbruchButton" layoutX="367.0" layoutY="20.0" mnemonicParsing="false" onAction="#abbrechen" prefHeight="27.0" prefWidth="93.0" text="abbrechen" AnchorPane.topAnchor="20.0" />
       <Button fx:id="rezeptHinzufuegenButton" layoutX="258.0" layoutY="20.0" mnemonicParsing="false" onAction="#rezeptHinzufuegen" prefHeight="27.0" prefWidth="93.0" text="hinzufügen" AnchorPane.topAnchor="20.0" />
+      <ChoiceBox fx:id="einheitChoiceBox" layoutX="305.0" layoutY="355.0" prefHeight="27.0" prefWidth="57.0" AnchorPane.leftAnchor="290.0" />
    </children>
 </AnchorPane>
